# tutorial-aeic21

./: .gitignore  CMakeLists.txt  Exercises.md  Exercises.rst  README.md  package.xml  slides-guide.md  turtlebot.rviz  tutorial.gpr
common/: CMakeLists.txt  package.xml  tutorial_common.gpr
common/src/: vfh.ads
exercises/: CMakeLists.txt  package.xml  tutorial_exercises.gpr
exercises/src/: client_async.adb  client_sync.adb  epuck_commander.adb  epuck_wander.adb  publisher_dynamic.adb  publisher_static.adb  server_example.adb  subscriber_dynamic.adb  subscriber_static.adb  turtlebot_vfh.adb  turtlebot_vfh_tf2.adb  turtlebot_wander.adb  turtlesim_commander.adb  turtlesim_hello.adb  turtlesim_mosaic.adb  vfh.ads
gpr_exercises/: tut21_exercises.gpr
gpr_exercises/src/: client_sync.adb  common.ads  epuck_commander.adb  epuck_test.adb  epuck_wander.adb  publisher_static.adb  server_example.adb  skel.adb  subscriber_dynamic.adb  turtlebot_vfh_tf2.adb  turtlebot_wander.adb  turtlesim_commander.adb  turtlesim_hello.adb  turtlesim_mosaic.adb  vfh.ads
gpr_solutions/: tut21_solutions.gpr
gpr_solutions/src/: client_async.adb  common.ads  publisher_dynamic.adb  server_example.adb  skel.adb  sol_epuck_commander.adb  sol_epuck_wander.adb  sol_publisher_static.adb  sol_server_example.adb  sol_turtlebot_vfh.adb  sol_turtlebot_vfh_tf2.adb  sol_turtlebot_wander.adb  sol_turtlesim_commander.adb  sol_turtlesim_hello.adb  sol_turtlesim_mosaic.adb  subscriber_static.adb  turtlebot_vfh.adb  turtlebot_wander.adb  turtlesim_commander.adb  vfh.adb  vfh.ads
protos/: Pioneer3at.proto  Pioneer3dxDiff.proto
public/: package.xml
solutions/: CMakeLists.txt  package.xml  tutorial_solutions.gpr
solutions/src/: sol_client_async.adb  sol_client_sync.adb  sol_epuck_commander.adb  sol_epuck_wander.adb  sol_publisher_dynamic.adb  sol_publisher_static.adb  sol_subscriber_dynamic.adb  sol_subscriber_static.adb  sol_turtlebot_vfh.adb  sol_turtlebot_vfh_tf2.adb  sol_turtlebot_wander.adb  sol_turtlesim_commander.adb  sol_turtlesim_hello.adb  sol_turtlesim_mosaic.adb  vfh.adb  vfh.ads
worlds/: .pioneer3dx.wbproj  pioneer3dx.wbt
