<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>tutorial_solutions</name>
  <version>0.1.0</version>
  <description>Exercises for the AEiC'21 tutorial</description>
  <maintainer email="amosteo@unizar.es">Alejandro R. Mosteo</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclada_common</depend>
  <depend>rosidl_generator_ada</depend>
  <depend>rclada</depend>
  <depend>rclada_tf2</depend>
  <depend>tutorial_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
